--- a/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -78,7 +78,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Fossil Impact Assessment Process"
                     },
@@ -672,7 +672,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Fossil Impact Assessment Plan"
                     },
@@ -3994,7 +3994,7 @@
             "functions_x_graphs": [],
             "graphid": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
             "iconclass": "fa fa-diamond",
-            "is_editable": false,
+            "is_editable": true,
             "isresource": true,
             "jsonldcontext": null,
             "name": {
@@ -8397,8 +8397,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "3690fd2c-2d6f-11ee-91c7-0050568377a0",
-                "published_time": "2023-07-28T12:50:17.515"
+                "publicationid": "8dbcf682-36f7-11ee-af1c-0050568377a0",
+                "published_time": "2023-08-09T15:58:55.785"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
@@ -8426,7 +8426,7 @@
             },
             "slug": null,
             "subtitle": {
-                "en": ""
+                "en": "Details of a project and fossil impact assessment phases "
             },
             "template_id": "50000000-0000-0000-0000-000000000002",
             "version": ""
@@ -8434,7 +8434,7 @@
     ],
     "metadata": {
         "db": "PostgreSQL 12.11 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 4.8.5 20150623 (Red Hat 4.8.5-44), 64-bit",
-        "git hash": "9f0ec2e 2023-06-14 16:41:07 -0700",
+        "git hash": "8661345 2023-07-27 09:40:45 -0700",
         "os": "Linux",
         "os version": "3.10.0-1160.92.1.el7.x86_64"
     }
