--- a/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -1723,13 +1723,13 @@
                     "card_id": "7e4cb186-c372-11ed-914a-5254004d77d3",
                     "config": {
                         "acceptedFiles": "",
-                        "label": "Mitigation Plan File",
+                        "label": "Assessment Plan File",
                         "maxFilesize": "200",
                         "rerender": true
                     },
                     "id": "7e4cc4dc-c372-11ed-914a-5254004d77d3",
                     "label": {
-                        "en": "Mitigation Plan File"
+                        "en": "Assessment Plan File"
                     },
                     "node_id": "7e4cbdca-c372-11ed-914a-5254004d77d3",
                     "sortorder": 5,
@@ -2574,6 +2574,35 @@
                     "widget_id": "10000000-0000-0000-0000-000000000009"
                 },
                 {
+                    "card_id": "9de5c571-f507-4df0-af17-a90204edd2db",
+                    "config": {
+                        "defaultValue": {
+                            "en": {
+                                "direction": "ltr",
+                                "value": ""
+                            }
+                        },
+                        "i18n_properties": [
+                            "placeholder"
+                        ],
+                        "label": "Project Name",
+                        "maxLength": "40",
+                        "placeholder": {
+                            "en": "Enter text"
+                        },
+                        "uneditable": false,
+                        "width": "100%"
+                    },
+                    "id": "de9792a0-343f-4ab4-bc66-bc9117e76c65",
+                    "label": {
+                        "en": "Project Name"
+                    },
+                    "node_id": "59c1b050-3c49-11ee-9268-080027b7463b",
+                    "sortorder": null,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000001"
+                },
+                {
                     "card_id": "10fca571-f2ec-4c06-bfd5-92606524ca40",
                     "config": {
                         "defaultValue": {
@@ -3269,6 +3298,15 @@
                     "name": null,
                     "ontologyproperty": "http://www.cidoc-crm.org/cidoc-crm/P15_was_influenced_by",
                     "rangenode_id": "f227cc80-a95f-11ed-a27c-5254004d77d3"
+                },
+                {
+                    "description": null,
+                    "domainnode_id": "5dfe07ea-9dc0-11ed-82b6-5254004d77d3",
+                    "edgeid": "5a2b216a-22b1-4b10-a955-1cbea60e3070",
+                    "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
+                    "name": null,
+                    "ontologyproperty": "http://www.cidoc-crm.org/cidoc-crm/P1_is_identified_by",
+                    "rangenode_id": "59c1b050-3c49-11ee-9268-080027b7463b"
                 },
                 {
                     "description": null,
@@ -5410,6 +5448,29 @@
                     "nodeid": "599ef6f2-a3d1-11ed-8a45-5254004d77d3",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E73_Information_Object",
                     "parentproperty": "http://www.cidoc-crm.org/cidoc-crm/P129i_is_subject_of",
+                    "sortorder": 0,
+                    "sourcebranchpublication_id": null
+                },
+                {
+                    "alias": "project_name",
+                    "config": {
+                        "en": ""
+                    },
+                    "datatype": "string",
+                    "description": null,
+                    "exportable": false,
+                    "fieldname": null,
+                    "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
+                    "hascustomalias": false,
+                    "is_collector": false,
+                    "isrequired": true,
+                    "issearchable": true,
+                    "istopnode": false,
+                    "name": "Project Name",
+                    "nodegroup_id": "5dfe07ea-9dc0-11ed-82b6-5254004d77d3",
+                    "nodeid": "59c1b050-3c49-11ee-9268-080027b7463b",
+                    "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E42_Identifier",
+                    "parentproperty": "http://www.cidoc-crm.org/cidoc-crm/P1_is_identified_by",
                     "sortorder": 0,
                     "sourcebranchpublication_id": null
                 },
@@ -8397,8 +8458,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "8dbcf682-36f7-11ee-af1c-0050568377a0",
-                "published_time": "2023-08-09T15:58:55.785"
+                "publicationid": "06f82ddc-41ed-11ee-87b5-080027b7463b",
+                "published_time": "2023-08-23T14:41:17.504"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
@@ -8433,9 +8494,9 @@
         }
     ],
     "metadata": {
-        "db": "PostgreSQL 12.11 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 4.8.5 20150623 (Red Hat 4.8.5-44), 64-bit",
-        "git hash": "8661345 2023-07-27 09:40:45 -0700",
+        "db": "PostgreSQL 15.3 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 11.3.1 20221121 (Red Hat 11.3.1-4), 64-bit",
+        "git hash": "866134572 2023-07-27 09:40:45 -0700",
         "os": "Linux",
-        "os version": "3.10.0-1160.92.1.el7.x86_64"
+        "os version": "5.14.0-333.el9.x86_64"
     }
 }
