574 - Initial cut of FMS upgrade for 7.5.x 448 - Add initial filename generator, RM slugs for s3 object store,

--- a/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/BC Fossil Project Sandbox.json
+++ b/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/BC Fossil Project Sandbox.json
@@ -674,7 +674,7 @@
                 "sortorder": 0,
                 "sourcebranchpublication_id": null
             },
-            "slug": null,
+            "slug": "project_sandbox",
             "subtitle": {
                 "en": "Project sandbox for transient analysis or scenario building"
             },
