--- a/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -8494,7 +8494,7 @@
                 "sortorder": 0,
                 "sourcebranchpublication_id": null
             },
-            "slug": null,
+            "slug": "project_assessment",
             "subtitle": {
                 "en": "Details of a project and fossil impact assessment phases "
             },
