613 - Updated BCRHP directory references

--- a/src/bcrhp/.gitignore
+++ b/src/bcrhp/.gitignore
@@ -1,18 +1,18 @@
 *.pyc
 *.log
-arches_bchp/logs
-arches_bchp/management/data/*
-arches_bchp/export_deliverables
-arches_bchp/cantaloupe/*
-arches_bchp/media/packages
-arches_bchp/uploadedfiles/*
-arches_bchp/settings_local.py
-arches_bchp/staticfiles
-arches_bchp/webpack/webpack-stats.json
-arches_bchp/webpack/webpack-user-config.js
+bcrhp/logs
+bcrhp/management/data/*
+bcrhp/export_deliverables
+bcrhp/cantaloupe/*
+bcrhp/media/packages
+bcrhp/uploadedfiles/*
+bcrhp/settings_local.py
+bcrhp/staticfiles
+bcrhp/webpack/webpack-stats.json
+bcrhp/webpack/webpack-user-config.js
 
 # Common resources that are copied from arches_common
-arches_bchp/media/css/project_common.css
+bcrhp/media/css/project_common.css
 arches_fossils/media/css/bc_index.css
 node_modules
 .vscode/
