--- a/src/bcrhp/bcrhp/package.json
+++ b/src/bcrhp/bcrhp/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "arches_bchp",
+    "name": "bcrhp",
     "scripts": {
         "build_production": "./media/node_modules/.bin/cross-env NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 NODE_ENV=production ./media/node_modules/.bin/webpack --config webpack/webpack.config.prod.js",
         "build_development": "./media/node_modules/.bin/cross-env NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 ./media/node_modules/.bin/webpack --config webpack/webpack.config.dev.js",
