--- a/src/bcfms/.gitignore
+++ b/src/bcfms/.gitignore
@@ -1,23 +1,23 @@
 *.pyc
 *.log
-arches_fossils/logs
-arches_fossils/management/data/*
-arches_fossils/export_deliverables
-arches_fossils/cantaloupe/*
-arches_fossils/media/packages
-arches_fossils/uploadedfiles/*
-arches_fossils/settings_local.py
+bcfms/logs
+bcfms/management/data/*
+bcfms/export_deliverables
+bcfms/cantaloupe/*
+bcfms/media/packages
+bcfms/uploadedfiles/*
+bcfms/settings_local.py
 
-arches_fossils/business_data/*.csv
-arches_fossils/mangement/data/*.py
+bcfms/business_data/*.csv
+bcfms/mangement/data/*.py
 
-arches_fossils/staticfiles
-arches_fossils/webpack/webpack-stats.json
-arches_fossils/webpack/webpack-user-config.js
+bcfms/staticfiles
+bcfms/webpack/webpack-stats.json
+bcfms/webpack/webpack-user-config.js
 node_modules
 
 # Files copied from arches_common
-arches_fossils/media/css/project_common.css
-arches_fossils/media/css/bc_index.css
+bcfms/media/css/project_common.css
+bcfms/media/css/bc_index.css
 .vscode/
 CACHE
