431 - Change mapbox key substitution to ansible variable

--- a/src/bcrhp/bcrhp/pkg/system_settings/System_Settings.json
+++ b/src/bcrhp/bcrhp/pkg/system_settings/System_Settings.json
@@ -39,7 +39,7 @@
                 },
                 "en": {
                   "direction": "ltr",
-                  "value": "{ mapbox key }"
+                  "value": "{{ mapbox key }}"
                 },
                 "en-US": {
                   "direction": "ltr",
