613 - Fixed settings substitution variable  name

--- a/src/bcfms/bcfms/pkg/system_settings/System_Settings.json
+++ b/src/bcfms/bcfms/pkg/system_settings/System_Settings.json
@@ -144,7 +144,7 @@
               "0e9000b0-4148-11e7-bd19-c4b301baab9f": {
                 "en": {
                   "direction": "ltr",
-                  "value": "{{ mapbox key }}"
+                  "value": "{{ mapbox_key }}"
                 }
               },
               "0e900254-4148-11e7-9902-c4b301baab9f": {
