--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -78,7 +78,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Fossil Impact Assessment Process"
                     },
@@ -186,7 +186,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Preliminary Study Report"
                     },
@@ -240,7 +240,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Impact Mitigation Process"
                     },
@@ -294,7 +294,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Site Assessment Process"
                     },
@@ -438,7 +438,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Preliminary Study Process"
                     },
@@ -1212,6 +1212,7 @@
                     "card_id": "9de5c571-f507-4df0-af17-a90204edd2db",
                     "config": {
                         "acceptedFiles": ".pdf, .jpeg, .jpg, .gif, .doc, .docx",
+                        "defaultValue": [],
                         "label": "Project Documents",
                         "maxFilesize": "200",
                         "rerender": true
@@ -1387,6 +1388,7 @@
                     "card_id": "6d2bbce4-c372-11ed-aa09-5254004d77d3",
                     "config": {
                         "acceptedFiles": "",
+                        "defaultValue": [],
                         "label": "Mitigation Plan File",
                         "maxFilesize": "200",
                         "rerender": true
@@ -1732,6 +1734,7 @@
                     "card_id": "7e4cb186-c372-11ed-914a-5254004d77d3",
                     "config": {
                         "acceptedFiles": "",
+                        "defaultValue": [],
                         "label": "Assessment Plan File",
                         "maxFilesize": "200",
                         "rerender": true
@@ -2306,6 +2309,7 @@
                     "card_id": "10fca571-f2ec-4c06-bfd5-92606524ca40",
                     "config": {
                         "acceptedFiles": "",
+                        "defaultValue": [],
                         "label": "CFP Document",
                         "maxFilesize": "200",
                         "rerender": true
@@ -2323,6 +2327,7 @@
                     "card_id": "224f7282-cbf6-49de-ab0d-67ba7fe19e93",
                     "config": {
                         "acceptedFiles": "",
+                        "defaultValue": [],
                         "label": "PSR File",
                         "maxFilesize": "200",
                         "rerender": true
@@ -2369,6 +2374,7 @@
                     "card_id": "dbb0d366-a360-11ed-ae42-5254004d77d3",
                     "config": {
                         "acceptedFiles": "",
+                        "defaultValue": [],
                         "label": "FIA Report",
                         "maxFilesize": "200",
                         "rerender": true
@@ -2804,6 +2810,7 @@
                     "card_id": "ff4fa404-a361-11ed-b0ab-5254004d77d3",
                     "config": {
                         "acceptedFiles": "",
+                        "defaultValue": [],
                         "label": "FIA Plan Report",
                         "maxFilesize": "200",
                         "rerender": true
@@ -4041,7 +4048,7 @@
             "functions_x_graphs": [],
             "graphid": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
             "iconclass": "fa fa-diamond",
-            "is_editable": false,
+            "is_editable": true,
             "isresource": true,
             "jsonldcontext": null,
             "name": {
@@ -4687,6 +4694,7 @@
                     "alias": "cfp_document",
                     "config": {
                         "activateMax": false,
+                        "imagesOnly": false,
                         "maxFileSize": null,
                         "maxFiles": 1
                     },
@@ -4852,7 +4860,7 @@
                     "datatype": "geojson-feature-collection",
                     "description": null,
                     "exportable": false,
-                    "fieldname": null,
+                    "fieldname": "ipa_loc",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                     "hascustomalias": false,
                     "is_collector": false,
@@ -5077,7 +5085,7 @@
                     "datatype": "concept",
                     "description": null,
                     "exportable": false,
-                    "fieldname": null,
+                    "fieldname": "ipa_type",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                     "hascustomalias": false,
                     "is_collector": true,
@@ -5468,7 +5476,7 @@
                     "datatype": "string",
                     "description": null,
                     "exportable": false,
-                    "fieldname": null,
+                    "fieldname": "ipa_prj_nm",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                     "hascustomalias": false,
                     "is_collector": false,
@@ -5628,7 +5636,7 @@
                             {
                                 "graphid": "605b0bbc-8661-4cf2-b340-df743a8c5f89",
                                 "inverseRelationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
-                                "name": "BC Fossil Contributor",
+                                "name": "Contributor",
                                 "relationshipCollection": "00000000-0000-0000-0000-000000000005",
                                 "relationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
                                 "useOntologyRelationship": false
@@ -5726,7 +5734,7 @@
                     "datatype": "resource-instance",
                     "description": null,
                     "exportable": false,
-                    "fieldname": null,
+                    "fieldname": "ipa_init",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                     "hascustomalias": false,
                     "is_collector": false,
@@ -5946,6 +5954,7 @@
                     "alias": "mitigation_plan_file",
                     "config": {
                         "activateMax": false,
+                        "imagesOnly": false,
                         "maxFileSize": null,
                         "maxFiles": 1
                     },
@@ -6172,6 +6181,7 @@
                     "alias": "psr_file",
                     "config": {
                         "activateMax": false,
+                        "imagesOnly": false,
                         "maxFileSize": null,
                         "maxFiles": 1
                     },
@@ -6421,6 +6431,7 @@
                     "alias": "site_assessment_plan_file",
                     "config": {
                         "activateMax": false,
+                        "imagesOnly": false,
                         "maxFileSize": null,
                         "maxFiles": 1
                     },
@@ -6831,6 +6842,7 @@
                     "alias": "project_documents",
                     "config": {
                         "activateMax": false,
+                        "imagesOnly": false,
                         "maxFileSize": null,
                         "maxFiles": 5
                     },
@@ -7047,7 +7059,7 @@
                     "datatype": "concept",
                     "description": "If only one geometry is drawn, qualify the meaning of the geometry.",
                     "exportable": false,
-                    "fieldname": null,
+                    "fieldname": "geom_qlfr",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                     "hascustomalias": false,
                     "is_collector": false,
@@ -7070,7 +7082,7 @@
                     "datatype": "string",
                     "description": null,
                     "exportable": false,
-                    "fieldname": null,
+                    "fieldname": "ipa_lcdesc",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                     "hascustomalias": false,
                     "is_collector": false,
@@ -7319,6 +7331,7 @@
                     "alias": "fia_file",
                     "config": {
                         "activateMax": false,
+                        "imagesOnly": false,
                         "maxFileSize": null,
                         "maxFiles": 1
                     },
@@ -8418,6 +8431,7 @@
                     "alias": "fiap_file",
                     "config": {
                         "activateMax": false,
+                        "imagesOnly": false,
                         "maxFileSize": null,
                         "maxFiles": 1
                     },
@@ -8467,8 +8481,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "2bde0974-6a19-11ee-a539-0050568377a0",
-                "published_time": "2023-10-13T17:38:03.776"
+                "publicationid": "8c9924fe-93ab-11ee-be82-005056a3bc47",
+                "published_time": "2023-12-05T14:19:10.260"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
@@ -8503,9 +8517,9 @@
         }
     ],
     "metadata": {
-        "db": "PostgreSQL 12.11 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 4.8.5 20150623 (Red Hat 4.8.5-44), 64-bit",
-        "git hash": "6656b68 2023-10-07 06:15:00 -0700",
+        "db": "PostgreSQL 16.1 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 11.4.1 20230605 (Red Hat 11.4.1-2), 64-bit",
+        "git hash": "fatal: not a git repository (or any parent up to mount point /fs)",
         "os": "Linux",
-        "os version": "3.10.0-1160.92.1.el7.x86_64"
+        "os version": "5.14.0-284.30.1.el9_2.x86_64"
     }
 }
