--- a/src/bcfms/bcfms/pkg/graphs/resource_models/BC Fossil Project Sandbox.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/BC Fossil Project Sandbox.json
@@ -139,7 +139,7 @@
                                 "text": "Polygon"
                             }
                         ],
-                        "label": "Spatial Coordinates Geometry",
+                        "label": "Study Area",
                         "maxZoom": 20,
                         "minZoom": 0,
                         "overlayConfigs": [],
@@ -150,10 +150,10 @@
                     },
                     "id": "9f2cbea8-dedb-11ed-ac5a-5254004d77d3",
                     "label": {
-                        "en": "Spatial Coordinates Geometry"
+                        "en": "Study Area"
                     },
                     "node_id": "9f2c9e28-dedb-11ed-ac5a-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 0,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000007"
                 },
@@ -169,7 +169,7 @@
                         "i18n_properties": [
                             "placeholder"
                         ],
-                        "label": "Geometry Description",
+                        "label": "Area Description",
                         "maxLength": null,
                         "placeholder": {
                             "en": "Enter text"
@@ -179,10 +179,10 @@
                     },
                     "id": "c5115709-c7a7-43d1-9219-99fdc0cf5738",
                     "label": {
-                        "en": "Geometry Description"
+                        "en": "Area Description"
                     },
                     "node_id": "f6236db0-dedb-11ed-ac2f-5254004d77d3",
-                    "sortorder": null,
+                    "sortorder": 1,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
                 },
@@ -365,7 +365,7 @@
                     },
                     "function_id": "60000000-0000-0000-0000-000000001001",
                     "graph_id": "c3923080-d21e-42d7-b8f1-637b9d0ab63c",
-                    "id": "77fac7b0-f376-4031-ada2-9262b51d4a71"
+                    "id": "5ffe40c5-b7de-459d-9f7c-833068a01ba7"
                 }
             ],
             "graphid": "c3923080-d21e-42d7-b8f1-637b9d0ab63c",
@@ -461,7 +461,7 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "spatial_coordinates_geometry",
+                    "alias": "study_area",
                     "config": {
                         "addToMap": true,
                         "advancedStyle": "",
@@ -496,7 +496,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "Spatial Coordinates Geometry",
+                    "name": "Study Area",
                     "nodegroup_id": "9f2c9e28-dedb-11ed-ac5a-5254004d77d3",
                     "nodeid": "9f2c9e28-dedb-11ed-ac5a-5254004d77d3",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E47_Spatial_Coordinates",
@@ -597,7 +597,7 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "geometry_description",
+                    "alias": "area_description",
                     "config": {
                         "en": ""
                     },
@@ -611,7 +611,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "Geometry Description",
+                    "name": "Area Description",
                     "nodegroup_id": "9f2c9e28-dedb-11ed-ac5a-5254004d77d3",
                     "nodeid": "f6236db0-dedb-11ed-ac2f-5254004d77d3",
                     "ontologyclass": "http://www.ics.forth.gr/isl/CRMdig/D29_Annotation_Object",
@@ -647,8 +647,8 @@
             "publication": {
                 "graph_id": "c3923080-d21e-42d7-b8f1-637b9d0ab63c",
                 "notes": null,
-                "publicationid": "1221f184-0bab-11ee-93c5-5254004d77d3",
-                "published_time": "2023-06-15T13:33:06.659"
+                "publicationid": "c0306c5a-9eaf-11ee-be5c-080027b7463b",
+                "published_time": "2023-12-19T14:46:57.592"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
@@ -683,9 +683,9 @@
         }
     ],
     "metadata": {
-        "db": "PostgreSQL 12.11 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 4.8.5 20150623 (Red Hat 4.8.5-44), 64-bit",
-        "git hash": "8661345 2023-07-27 09:40:45 -0700",
+        "db": "PostgreSQL 16.0 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 11.3.1 20221121 (Red Hat 11.3.1-4), 64-bit",
+        "git hash": "e10813e38 2023-12-11 05:06:58 -0800",
         "os": "Linux",
-        "os version": "3.10.0-1160.92.1.el7.x86_64"
+        "os version": "5.14.0-333.el9.x86_64"
     }
 }
