--- a/src/bcfms/bcfms/package.json
+++ b/src/bcfms/bcfms/package.json
@@ -10,7 +10,7 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#dev/7.5.x"
     },
     "dependencies": {
-        "arches": "archesproject/arches#dev/7.5.x"
+        "arches": "archesproject/arches#7.5.0"
     },
     "nodeModulesPaths": {
     }
