dev - Make management ignore rules less restrictive

--- a/src/bcfms/.gitignore
+++ b/src/bcfms/.gitignore
@@ -9,7 +9,7 @@ bcfms/uploadedfiles/*
 bcfms/settings_local.py
 
 bcfms/business_data/*.csv
-bcfms/mangement/data/*.py
+bcfms/mangement/data/test_user_list.py
 
 bcfms/staticfiles
 bcfms/webpack/webpack-stats.json
