--- a/src/bcrhp/.gitignore
+++ b/src/bcrhp/.gitignore
@@ -1,7 +1,7 @@
 *.pyc
 *.log
 bcrhp/logs
-bcrhp/management/data/*
+bcrhp/management/data/test_user_list.py
 bcrhp/export_deliverables
 bcrhp/cantaloupe/*
 bcrhp/media/packages
